examples/test/testpolicy17442.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17442
  namespace: namespace314
spec:
  podSelector:
    matchLabels:
      key48: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value18
          key6: value10
      podSelector:
        matchLabels:
          key24: value36
          key1: value10
          key29: value7
